force-app/main/default/objects/Eligible_Customer__c/Eligible_Customer__c.object-meta.xml
<CustomObject>
    <description>Member Benefit Program: Eligible Customers - Junction Object to link Account and Member Benefit Program</description>
    <label>Eligible Customer</label>
    <nameField>
        <displayFormat>ECN-{00000}</displayFormat>
        <label>Eligible Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligible Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>