force-app/main/default/objects/Eligible_Customer__c/fields/Customer_ContactId__c.field-meta.xml
<CustomField>
    <fullName>Customer_ContactId__c</fullName>
    <formula>CASESAFEID(Customer__r.PersonContact.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ContactId</label>
    <type>Text</type>
</CustomField>