force-app/main/default/objects/Eligible_Customer__c/fields/Member_Benefit_Eligibility_Flag__c.field-meta.xml
<CustomField>
    <fullName>Member_Benefit_Eligibility_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Benefit Eligibility Flag</label>
    <type>Checkbox</type>
</CustomField>