force-app/main/default/objects/Eligible_Customer__c/fields/Member_Benefit_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Member_Benefit_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Benefit Email Sent</label>
    <type>Checkbox</type>
</CustomField>