force-app/main/default/objects/Eligible_Customer__c/fields/Member_Benefit_Program__c.field-meta.xml
<CustomField>
    <fullName>Member_Benefit_Program__c</fullName>
    <label>Member Benefit Program</label>
    <referenceTo>Member_Benefit_Program__c</referenceTo>
    <relationshipLabel>Eligible Customers</relationshipLabel>
    <relationshipName>Eligible_Customers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>