force-app/main/default/objects/Eligible_Customer__c/fields/Send_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Send_to_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to MC</label>
    <type>Checkbox</type>
</CustomField>