force-app/main/default/objects/Eligible_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Member_Benefit_Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>